--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,7 +19,10 @@ h3 {
   font-size: 1.1em;
 }
 @media screen and (min-width: 64em) {
-.page-header {
-    padding: 2rem 6rem;
-}
+  .page-header {
+      padding: 1rem 6rem;
+      .btn {
+        padding: 5px;
+      }
+  }
 }
